# landauhydro

./: .gitignore
doc/: Pratt.tex
figs/: current.py  rho.py
local/include/: defs.h
old_software/include/: eos.h
old_software/src/: eos.cc
oldstuff/: cyclic.cc
oldstuff/local/include/: landau.h  parametermap.h
oldstuff/oldsoftware/: makefile
oldstuff/oldsoftware/include/: landau.h  randy.h
oldstuff/oldsoftware/src/: cell.cc  landau.cc  mesh.cc
oldstuff/run/: hydro  hydromain.cc  makefile
oldstuff/software/: makefile
oldstuff/software/src/: cell.cc  landau.cc  mesh.cc  parametermap.cc  randy.cc
oldstuff/sparse/: eigeniterate.cc  eigensparse.cc  iterate  iterate.cc  makefile
oldstuff/sukanya/: Non.Rel-Hydro-IDEAL-1.cxx  Non.Rel-Hydro-IDEAL-1.f  Non.Rel-Hydro-Non-IDEAL.cxx  TEST-Tridiag.f  sukanya.cxx  sukanya_tritest  sukanya_tritest.cc
scottrun/: CMakeLists.txt  hydro  hydromain.cc  makefile  runhydro.sh
scottrun/figs/: animation.html  animation_rho_only.html  makeframes.py  makemovie.sh  single_animate.py  xslice.py  xslice_animate.py  xslice_animate_rho_only.py
software/: CMakeLists.txt  makefile
software/include/: constants.h.crap  defs.h  eos.h  landau.h
software/src/: cell.cc  eos.cc  landau.cc  mesh.cc
